k8s/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: mostafag95/app3
        ports:
        - containerPort: 8080
        command: ["sh", "-c", "sleep 10 && java -jar app/app.jar"]
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: prod
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: spring-boot-app
